Fix on mobile colors

--- a/css/main.css
+++ b/css/main.css
@@ -2424,7 +2424,7 @@ box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.17);
 
 .header__menu-toggle:hover,
 .header__menu-toggle:focus {
-  color: #ffffff;
+  color: #0488ED;
 }
 
 .header__menu-toggle span {
@@ -2432,7 +2432,7 @@ box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.17);
   width: 16px;
   height: 2px;
   margin-top: -1px;
-  background-color: #ffffff;
+  background-color: #0488ED;
   transition: all 0.5s;
   font: 0/0 a;
   text-shadow: none;
@@ -2464,13 +2464,13 @@ box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.17);
 }
 
 .header__menu-toggle.is-clicked span {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: white;
   transition: all 0.1s;
 }
 
 .header__menu-toggle.is-clicked span::before,
 .header__menu-toggle.is-clicked span::after {
-  background-color: white;
+  background-color:#0488ED
 }
 
 .header__menu-toggle.is-clicked span::before {
@@ -2507,8 +2507,8 @@ box-shadow: 0px 0px 22px 3px rgba(0,0,0,0.17);
 
 .header__social a {
   display: block;
-  background-color: rgba(255, 255, 255, 0.04);
-  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.15);
+  color: rgba(255, 255, 255, 1);
   height: 3.6rem;
   width: 3.6rem;
   border-radius: 50%;
@@ -2837,7 +2837,7 @@ body.search-is-visible {
   .header__top {
     z-index: 100;
     /* background: #145980; */
-    background: #145980;
+    background: #ffffff;
     width: 100%;
     height: 78px;
     position: fixed;
@@ -2867,7 +2867,7 @@ body.search-is-visible {
 
   .header__nav-wrap {
     z-index: 99;
-    background: #135073;
+    background: #0488ED;
     opacity: 0;
     visibility: hidden;
     position: fixed;
@@ -3157,7 +3157,7 @@ body.search-is-visible {
   color: rgba(255, 255, 255, 0.5);
   transition: all 0.3s;
   background-image: url(../images/icons/icon-arrow-up.svg);
-  background-color: #145980;
+  background-color: #0488ED;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 7px 14px;
